Add different adapter for fragments and add landscape layout

--- a/app/src/main/res/layout/fragment_adapter.xml
+++ b/app/src/main/res/layout/fragment_adapter.xml
@@ -43,9 +43,9 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|end"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_gravity="top|start"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="-5dp"
             android:src="@drawable/ic_bookmark_24dp" />
 
